[package]
name = "novation_remote_25sl"
version = "0.1.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "User friendly API to the Ableton Novation ReMOTE 25SL MIDI controller."
readme = "README.md"
keywords = ["ableton", "novation", "midi", "25sl", "ReMOTE"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/novation_remote_25sl.git"
homepage = "https://github.com/mitchmindtree/novation_remote_25sl"

[dependencies]
pitch_calc = "0.11"

[dev-dependencies]
midir = "0.3"
